# rookiedb

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: database.rs  error.rs  index.rs  lib.rs  options.rs  table.rs
src/catalog/: mod.rs  schema.rs
src/common/: channel.rs  mod.rs  own_arc.rs  spin_lock.rs
src/common/array/: expr.rs  impls.rs  iterator.rs  macros.rs  mod.rs  primitive_array.rs  scalar.rs  string_array.rs
src/common/array/expr/: cmp.rs
src/common/array/scalar/: impls.rs
src/common/chunk/: builder.rs  mod.rs
src/concurrency/: mod.rs
src/datatypes/: batch.rs  macros.rs  mod.rs  record.rs  types.rs
src/datatypes/array/: expr.rs  impls.rs  macros.rs  mod.rs
src/datatypes/array/expr/: cmp.rs  string.rs
src/datatypes/array/scalar/: impls.rs
src/datatypes/chunk/: builder.rs  mod.rs
src/index/: b_plus_metadata.rs  b_plus_node.rs  b_plus_tree.rs  metadata.rs  mod.rs  node.rs
src/memory/: frame.rs  manager.rs  mod.rs
src/page/: group.rs  mod.rs
src/page/file/: mod.rs  reader.rs  writer.rs
src/query/: mod.rs  parser.rs  server.rs
src/table/: cleanup.rs  flush.rs  manifest.rs  metadata.rs  mod.rs  page.rs  page_directory.rs  page_manager.rs  record.rs  recover.rs  recovery.rs  schema.rs  stats.rs
src/table/bg/: cleanup.rs  flush.rs  mod.rs
src/table/cache/: lru.rs  mod.rs
src/table/index/: btree.rs  btree_builder.rs  mod.rs  node.rs  tree.rs
src/table/index/node/: internal.rs  leaf.rs  mod.rs
src/table/page/: error.rs  iter.rs  manager.rs  mod.rs  page_directory.rs  page_file.rs  partition.rs  reader.rs  writer.rs
src/table/page/file/: writer.rs
src/utils/: bitmap.rs  bloom.rs  checksum.rs  compression.rs  fs.rs  mod.rs  rcu.rs
