[package]
name = "rookiedb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
async-fs = "1.6.0"
async-trait = "0.1.62"
bitflags = "1.3.2"
bytes = "1.3.0"
crc32fast = "1.3.2"
crossbeam-epoch = "0.9.13"
dashmap = "5.4.0"
futures = "0.3.25"
futures-lite = "1.12.0"
parking_lot = "0.12.1"
snap = "1.1.0"
sqlparser = "0.30.0"
thiserror = "1.0.38"
zstd = "0.12.2"
zstd-safe = "6.0.2"

[dev-dependencies]
rand = "0.8.0"
tempdir = "0.3.7"
tempfile = "3.3.0"
quickcheck = "1"
